--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,9 +1,9 @@
 name: Deploy to Cloud Run
 
 env:
-  SERVICE_NAME: custom-fastapi-service
-  PROJECT_ID: h-t-d-a-f-a-t-g-c-r
-  DOCKER_IMAGE_URL: us-central1-docker.pkg.dev/h-t-d-a-f-a-t-g-c-r/custom-fastapi/custom-fastapi
+  SERVICE_NAME: agentepessoal
+  PROJECT_ID: agente-pessoal-464402
+  DOCKER_IMAGE_URL: us-central1-docker.pkg.dev/agente-pessoal-464402/agente-pessoal-repo/agentepessoal
 
 on:
   push:
